# Instant-Checkout-Link

./: README.md  life.env  links_database.json  pyproject.toml
backend/: app.py
backend/database/: links.py
backend/routes/: create_link.py  pay.py  verify.py
backend/utils/: algorand.py  contract_client.py
frontend/: index.html
scripts/: deploy_contract.py
smart_contracts/artifacts/hello_world/: hello_world_client.py
smart_contracts/instant_checkout/: __init__.py  contracts.py
